# nnUNet_contact_seg

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  hello.py  pipeline_description.json  pixi.toml  pyproject.toml  run.py
.github/actions/action-setup_task-installPyProject/: action.yml
.github/workflows/: python-testing.yml
config/: snakebids.yml
docs/: Makefile  conf.py  index.md
docs/getting_started/: installation.md
docs/usage/: app_cli.md  cli.md  snakemake_cli.md
nnunet_contact_seg/: pipeline_description.json  run.py
nnunet_contact_seg/config/: snakebids.yml
nnunet_contact_seg/workflow/: Snakefile
nnunet_contact_seg/workflow/lib/: utils.py
nnunet_contact_seg/workflow/rules/: common.smk  coords.smk  nnunet.smk  postprocessing.smk  preprocessing.smk  qc.smk  utils.py
nnunet_contact_seg/workflow/scripts/: apply_contact_registration.py  contacts_qc.py  label.py  label_map.py  n4_bias_corr.py  nnUNet_coords.py  qc.py  reg_qc.py  regis_script.py  registration.py  testing.py  transform_coords.py
resources/: electrodes.config
workflow/: Snakefile
workflow/scripts/: label.py  nnUNet_coords.py  nnUNet_predict.py  testing_label.py  transform_coords.py
